--- a/public/css/style-section.css
+++ b/public/css/style-section.css
@@ -21,7 +21,7 @@
     background-color: #616c7ca8;
     padding: 30px;
     border-radius: 10px;
-    color: #743f3f;
+    color: #ffffff;
 }
 
 .btn2 {
